--- a/themes/PaperMod/i18n/en.yaml
+++ b/themes/PaperMod/i18n/en.yaml
@@ -27,7 +27,7 @@
   translation: "Редактировать"
 
 - id: code_copy
-  translation: "Скопировать"
+  translation: "Копировать"
 
 - id: code_copied
-  translation: "Скопировано!"
+  translation: "Успешно!"
